tests/typing/fail/nested_star_random_access_fail.rb

x = [true,"hi"]
y = [3,*x]

y[1] + 5
y[2].concat "blah"
